# media-mux

./: .gitmodules  CMakeLists.txt  README.md  avahi-publish-media-mux.sh  build-bins.sh  dhcpd.conf  guisettings.xml  media-mux-action-batch.sh  media-mux-action.sh  media-mux-autoplay-master.sh  media-mux-autoplay-slave.sh  media-mux-autostart.sh  media-mux-controller.c  media-mux-first-boot.sh  media-mux-frozen-frame.sh  media-mux-play-batch.sh  media-mux-play.sh  media-mux-start.sh  media-mux-stop-kodi-players.sh  media-mux-stop.sh  media-mux-sync-kodi-players.sh  media-mux-volume.sh  mediamtx.service  mediamtx.yml  mediamuxstart.desktop  mediamuxstop.desktop  ntp-trigger.py  ntp-trigger.service  rc.local  rc.local.auto  rc.local.master  setup-selfhosted.sh  setup.sh  sources.xml  stress-test-sync.sh  wf-panel-pi.ini
kodi-addon/: INSTALL.md
kodi-addon/service.mediamux.sync/: VideoOSD.xml  addon.xml  context.py  default.py  service.py  stop.py
kodi-addon/service.mediamux.sync/resources/keymaps/: mediamux.xml
kodi-addon/templates/Database/: Addons33.db
media-client/: button-map.json  media-client.cpp  readme.txt
trighappy/: CMakeLists.txt  key-input-handler.sh  media-mux-trighappy.conf
